update input hardware test options

--- a/GPIO STD/std_gpio_V1.000exp/reference/std_gpio_v1_000.ini
+++ b/GPIO STD/std_gpio_V1.000exp/reference/std_gpio_v1_000.ini
@@ -3121,57 +3121,190 @@ cmdtestin31state = "r\$tsCanId\x45\x1F\x07\x00\x00"
 cmdtestin32state = "r\$tsCanId\x45\x20\x07\x00\x00"		;cmd 1568
 
 #else
-cmdStopTestMode = "E\x00\x01"
+cmdStopTestMode = "E\x00\x01"     ;r\$tsCanId\x45\x01\x02\x00\x00"		;cmd 513
 cmdEnableTestMode = "E\x01\x01"
 
-cmdtestout1on = "E\x01\x02"
-cmdtestout1off = "E\x02\x02"
-cmdtestout150dc = "E\x03\x02"
-cmdtestout2on = "E\x04\x02"
-cmdtestout2off = "E\x05\x02"
-cmdtestout250dc = "E\x06\x02"
-cmdtestout3on = "E\x07\x02"
-cmdtestout3off = "E\x08\x02"
-cmdtestout350dc = "E\x09\x02"
-cmdtestout4on = "E\x0A\x02"
-cmdtestout4off = "E\x0B\x02"
-cmdtestout450dc = "E\x0C\x02"
-cmdtestout5on = "E\x0D\x02"
-cmdtestout5off = "E\x0E\x02"
-cmdtestout550dc = "E\x0F\x02"
-cmdtestout6on = "E\x10\x02"
-cmdtestout6off = "E\x11\x02"
-cmdtestout650dc = "E\x12\x02"
-cmdtestout7on = "E\x13\x02"
-cmdtestout7off = "E\x14\x02"
-cmdtestout750dc = "E\x15\x02"
-cmdtestout8on = "E\x16\x02"
-cmdtestout8off = "E\x17\x02"
-cmdtestout850dc = "E\x18\x02"
-cmdtestout9on = "E\x19\x02"
-cmdtestout9off = "E\x1A\x02"
-cmdtestout950dc = "E\x1B\x02"
-cmdtestout10on = "E\x1C\x02"
-cmdtestout10off = "E\x1D\x02"
-cmdtestout1050dc = "E\x1E\x02"
-cmdtestout11on = "E\x1F\x02"
-cmdtestout11off = "E\x20\x02"
-cmdtestout1150dc = "E\x21\x02"
-cmdtestout12on = "E\x22\x02"
-cmdtestout12off = "E\x23\x02"
-cmdtestout1250dc = "E\x24\x02"
-cmdtestout13on = "E\x25\x02"
-cmdtestout13off = "E\x26\x02"
-cmdtestout1350dc = "E\x27\x02"
-cmdtestout14on = "E\x28\x02"
-cmdtestout14off = "E\x29\x02"
-cmdtestout1450dc = "E\x2A\x02"
-cmdtestout15on = "E\x2B\x02"
-cmdtestout15off = "E\x2C\x02"
-cmdtestout1550dc = "E\x2D\x02"
-cmdtestout16on = "E\x2E\x02"
-cmdtestout16off = "E\x2F\x02"
-cmdtestout1650dc = "E\x30\x02"
+cmdtestout1on = "E\x01\x02"     ;cmd 513
+cmdtestout2on = "E\x02\x02"		;cmd 514
+cmdtestout3on = "E\x03\x02"
+cmdtestout4on = "E\x04\x02"		;cmd 516
+cmdtestout5on = "E\x05\x02"		;cmd517
+cmdtestout6on = "E\x06\x02"
+cmdtestout7on = "E\x07\x02"		;cmd519
+cmdtestout8on = "E\x08\x02"		;cmd520
+cmdtestout9on = "E\x09\x02"
+cmdtestout10on = "E\x0A\x02"	;cmd522
+cmdtestout11on = "E\x0B\x02"
+cmdtestout12on = "E\x0C\x02"
+cmdtestout13on = "E\x0D\x02"
+cmdtestout14on = "E\x0E\x02"	;cmd526
+cmdtestout15on = "E\x0F\x02"
+cmdtestout16on = "E\x10\x02"	;cmd528
+cmdtestout17on = "E\x11\x02"	;cmd 529
+cmdtestout18on = "E\x12\x02"	;cmd 530
+cmdtestout19on = "E\x13\x02"
+cmdtestout20on = "E\x14\x02"	;cmd 532
+cmdtestout21on = "E\x15\x02"	;cmd533
+cmdtestout22on = "E\x16\x02"
+cmdtestout23on = "E\x17\x02"	;cmd535
+cmdtestout24on = "E\x18\x02"	;cmd536
+cmdtestout25on = "E\x19\x02"
+cmdtestout26on = "E\x1A\x02"	;cmd538
+cmdtestout27on = "E\x1B\x02"
+cmdtestout28on = "E\x1C\x02"
+cmdtestout29on = "E\x1D\x02"
+cmdtestout30on = "E\x1E\x02"	;cmd542
+cmdtestout31on = "E\x1F\x02"
+cmdtestout32on = "E\x20\x02"	;cmd544
+
+cmdtestout1off = "E\x01\x03"	;cmd 769
+cmdtestout2off = "E\x02\x03"	;cmd 770
+cmdtestout3off = "E\x03\x03"
+cmdtestout4off = "E\x04\x03"	;cmd 772
+cmdtestout5off = "E\x05\x03"
+cmdtestout6off = "E\x06\x03"
+cmdtestout7off = "E\x07\x03"
+cmdtestout8off = "E\x08\x03"
+cmdtestout9off = "E\x09\x03"
+cmdtestout10off = "E\x0A\x03"
+cmdtestout11off = "E\x0B\x03"
+cmdtestout12off = "E\x0C\x03"
+cmdtestout13off = "E\x0D\x03"
+cmdtestout14off = "E\x0E\x03"
+cmdtestout15off = "E\x0F\x03"
+cmdtestout16off = "E\x10\x03"	;cmd 784
+cmdtestout17off = "E\x11\x03"	;cmd 785
+cmdtestout18off = "E\x12\x03"	;cmd 786
+cmdtestout19off = "E\x13\x03"
+cmdtestout20off = "E\x14\x03"	;cmd 788
+cmdtestout21off = "E\x15\x03"
+cmdtestout22off = "E\x16\x03"
+cmdtestout23off = "E\x17\x03"
+cmdtestout24off = "E\x18\x03"
+cmdtestout25off = "E\x19\x03"
+cmdtestout26off = "E\x1A\x03"
+cmdtestout27off = "E\x1B\x03"
+cmdtestout28off = "E\x1C\x03"
+cmdtestout29off = "E\x1D\x03"
+cmdtestout30off = "E\x1E\x03"
+cmdtestout31off = "E\x1F\x03"
+cmdtestout32off = "E\x20\x03"	;cmd 800
+
+cmdtestout150dc = "r\$tsCanId\x45\x01\x04\x00\x00"		;cmd 1025
+cmdtestout250dc = "r\$tsCanId\x45\x02\x04\x00\x00"
+cmdtestout350dc = "r\$tsCanId\x45\x03\x04\x00\x00"
+cmdtestout450dc = "r\$tsCanId\x45\x04\x04\x00\x00"
+cmdtestout550dc = "r\$tsCanId\x45\x05\x04\x00\x00"
+cmdtestout650dc = "r\$tsCanId\x45\x06\x04\x00\x00"		;cmd
+cmdtestout750dc = "r\$tsCanId\x45\x07\x04\x00\x00"
+cmdtestout850dc = "r\$tsCanId\x45\x08\x04\x00\x00"
+cmdtestout950dc = "r\$tsCanId\x45\x09\x04\x00\x00"
+cmdtestout1050dc = "r\$tsCanId\x45\x0A\x04\x00\x00"
+cmdtestout1150dc = "r\$tsCanId\x45\x0B\x04\x00\x00"
+cmdtestout1250dc = "r\$tsCanId\x45\x0C\x04\x00\x00"
+cmdtestout1350dc = "r\$tsCanId\x45\x0D\x04\x00\x00"
+cmdtestout1450dc = "r\$tsCanId\x45\x0E\x04\x00\x00"
+cmdtestout1550dc = "r\$tsCanId\x45\x0F\x04\x00\x00"
+cmdtestout1650dc = "r\$tsCanId\x45\x10\x04\x00\x00"		;cmd 1040
+
+cmdtestin1on = "E\x01\x05"		;cmd 1281
+cmdtestin2on = "E\x02\x05"		;cmd 1282
+cmdtestin3on = "E\x03\x05"
+cmdtestin4on = "E\x04\x05"		;cmd 1284
+cmdtestin5on = "E\x05\x05"		;cmd 1285
+cmdtestin6on = "E\x06\x05"
+cmdtestin7on = "E\x07\x05"		;cmd1287
+cmdtestin8on = "E\x08\x05"		;cmd1288
+cmdtestin9on = "E\x09\x05"
+cmdtestin10on = "E\x0A\x05"		;cmd1290
+cmdtestin11on = "E\x0B\x05"
+cmdtestin12on = "E\x0C\x05"
+cmdtestin13on = "E\x0D\x05"
+cmdtestin14on = "E\x0E\x05"		;cmd1294
+cmdtestin15on = "E\x0F\x05"
+cmdtestin16on = "E\x10\x05"		;cmd1296
+cmdtestin17on = "E\x11\x05"		;cmd 1297
+cmdtestin18on = "E\x12\x05"		;cmd 1298
+cmdtestin19on = "E\x13\x05"
+cmdtestin20on = "E\x14\x05"		;cmd 1300
+cmdtestin21on = "E\x15\x05"		;cmd 1301
+cmdtestin22on = "E\x16\x05"
+cmdtestin23on = "E\x17\x05"		;cmd1303
+cmdtestin24on = "E\x18\x05"		;cmd1304
+cmdtestin25on = "E\x19\x05"
+cmdtestin26on = "E\x1A\x05"		;cmd1306
+cmdtestin27on = "E\x1B\x05"
+cmdtestin28on = "E\x1C\x05"
+cmdtestin29on = "E\x1D\x05"
+cmdtestin30on = "E\x1E\x05"		;cmd1310
+cmdtestin31on = "E\x1F\x05"
+cmdtestin32on = "E\x20\x05"		;cmd1312
+
+cmdtestin1off = "E\x01\x06"		;cmd 1537
+cmdtestin2off = "E\x02\x06"		;cmd 1538
+cmdtestin3off = "E\x03\x06"
+cmdtestin4off = "E\x04\x06"		;cmd 1540
+cmdtestin5off = "E\x05\x06"
+cmdtestin6off = "E\x06\x06"
+cmdtestin7off = "E\x07\x06"
+cmdtestin8off = "E\x08\x06"
+cmdtestin9off = "E\x09\x06"
+cmdtestin10off = "E\x0A\x06"
+cmdtestin11off = "E\x0B\x06"
+cmdtestin12off = "E\x0C\x06"
+cmdtestin13off = "E\x0D\x06"
+cmdtestin14off = "E\x0E\x06"
+cmdtestin15off = "E\x0F\x06"
+cmdtestin16off = "E\x10\x06"	;cmd 1552
+cmdtestin17off = "E\x11\x06"	;cmd 1553
+cmdtestin18off = "E\x12\x06"	;cmd 1554
+cmdtestin19off = "E\x13\x06"
+cmdtestin20off = "E\x14\x06"	;cmd 1556
+cmdtestin21off = "E\x15\x06"
+cmdtestin22off = "E\x16\x06"
+cmdtestin23off = "E\x17\x06"
+cmdtestin24off = "E\x18\x06"
+cmdtestin25off = "E\x19\x06"
+cmdtestin26off = "E\x1A\x06"
+cmdtestin27off = "E\x1B\x06"
+cmdtestin28off = "E\x1C\x06"
+cmdtestin29off = "E\x1D\x06"
+cmdtestin30off = "E\x1E\x06"
+cmdtestin31off = "E\x1F\x06"
+cmdtestin32off = "E\x20\x06"	;cmd 1568
+
+cmdtestin1state = "E\x01\x07"	;cmd 1537
+cmdtestin2state = "E\x02\x07"	;cmd 1538
+cmdtestin3state = "E\x03\x07"
+cmdtestin4state = "E\x04\x07"	;cmd 1540
+cmdtestin5state = "E\x05\x07"
+cmdtestin6state = "E\x06\x07"
+cmdtestin7state = "E\x07\x07"
+cmdtestin8state = "E\x08\x07"
+cmdtestin9state = "E\x09\x07"
+cmdtestin10state = "E\x0A\x07"
+cmdtestin11state = "E\x0B\x07"
+cmdtestin12state = "E\x0C\x07"
+cmdtestin13state = "E\x0D\x07"
+cmdtestin14state = "E\x0E\x07"
+cmdtestin15state = "E\x0F\x07"
+cmdtestin16state = "E\x10\x07"	;cmd 1552
+cmdtestin17state = "E\x11\x07"	;cmd 1553
+cmdtestin18state = "E\x12\x07"	;cmd 1554
+cmdtestin19state = "E\x13\x07"
+cmdtestin20state = "E\x14\x07"	;cmd 1556
+cmdtestin21state = "E\x15\x07"
+cmdtestin22state = "E\x16\x07"
+cmdtestin23state = "E\x17\x07"
+cmdtestin24state = "E\x18\x07"
+cmdtestin25state = "E\x19\x07"
+cmdtestin26state = "E\x1A\x07"
+cmdtestin27state = "E\x1B\x07"
+cmdtestin28state = "E\x1C\x07"
+cmdtestin29state = "E\x1D\x07"
+cmdtestin30state = "E\x1E\x07"
+cmdtestin31state = "E\x1F\x07"
+cmdtestin32state = "E\x20\x07"	;cmd 1568
 
 #endif
 
@@ -3297,26 +3430,6 @@ cmdtestout1650dc = "E\x30\x02"
    #cltADCGauge       = cltADC,        "CLT ADC",            "",        0,   255,     -1,    -1,  256,  256, 0, 0
    ;tpsADCGauge       = tpsADC,        "TPS ADC",            "",        0,   255,     -1,    -1,  256,  256, 0, 0
    #batVoltGauge      = batteryVoltage,        "BAT V",              "",        0,   255,     -1,    -1,  256,  256, 0, 0
-
-   gaugeCategory = "Room Zone Sensor inputs"
-;	Bedroom1			= Bedroom1_Temp,			"Bedroom 1"					"",				0,		35,	-1,		-1,	36,		36,	0,	0
-;	Bedroom2			= Bedroom2_Temp,			"Bedroom 2"					"",				0,		35,	-1,		-1,	36,		36,	0,	0
-;	MasterBedroomAIR	= MasterBedroomAIR_Temp,	"Master Bedroom AIR"		"",				0,		35,	-1,		-1,	36,		36,	0,	0
-;	MasterBedroomFLOOR	= MasterBedroomFLOOR_Temp,	"Master Bedroom FLOOR"		"",				0,		35,	-1,		-1,	36,		36,	0,	0
-;	FamiyBathroom		= FamilyBathroom_Temp,		"Family Bathroom"			"",				0,		35,	-1,		-1,	36,		36,	0,	0
-;	MasterEnsuiteAIR	= MasterEnsuiteAIR_Temp,		"Master Ensuite Air"		"",				0,		35,	-1,		-1,	36,		36,	0,	0
-;	MasterEnsuiteFLOOR	= MasterEnsuiteFLOOR_Temp,	"Master Ensuite Floor"		"",				0,		35,	-1,		-1,	36,		36,	0,	0
-;	1stLanding			= 1stLanding_Temp,			"1st Landing"				"",				0,		35,	-1,		-1,	36,		36,	0,	0
-;	UpperGNDHallAIR		= UpperGNDHallAIR_Temp,		"Upper Ground Hall Air"		"",				0,		35,	-1,		-1,	36,		36,	0,	0
-;	UpperGNDHallFLOOR	= UpperGNDHallFLOOR_Temp,	"Upper Ground Hall Floor"	"",				0,		35,	-1,		-1,	36,		36,	0,	0
-;	LowerGNDHallAIR		= LowerGNDHallAIR_Temp,		"Lower Ground Hall Air"		"",				0,		35,	-1,		-1,	36,		36,	0,	0
-;	LowerGNDHallFLOOR	= LowerGNDHallFLOOR_Temp,	"Lower Ground Hall Floor"	"",				0,		35,	-1,		-1,	36,		36,	0,	0
-;	KitchenAIR			= KitchenAIR_Temp,			"Kitchen Air"				"",				0,		35,	-1,		-1,	36,		36,	0,	0
-;	KitchenFLOOR		= KitchenFLOOR_Temp,		"Kitchen Floor"				"",				0,		35,	-1,		-1,	36,		36,	0,	0
-;	LivingRoomAIR		= LivingRoomAIR_Temp,		"Living Room Air"			"",				0,		35,	-1,		-1,	36,		36,	0,	0
-;	LivingRoomFLOOR		= LivingRoomFLOOR_Temp,		"Living Room Floor"			"",				0,		35,	-1,		-1,	36,		36,	0,	0
-;	DiningRoomAIR		= DiningRoomAIR_Temp,		"Dining Room Air"			"",				0,		35,	-1,		-1,	36,		36,	0,	0
-;	DiningRoomFLOOR		= DiningRoomFLOOR_Temp,		"Dining Room Floor"			"",				0,		35,	-1,		-1,	36,		36,	0,	0
 
    	gaugeCategory = "Digital Inputs"
 	DinGauge1_8		= digitalinputs1_8,		"Digital Inputs 1-8",		        "",				0,		254,  -1,		-1,	255,		255,	0,	0
